Implement clear and drop components.

--- a/dbinspector-client/src/app/databases/databases.component.html
+++ b/dbinspector-client/src/app/databases/databases.component.html
@@ -21,10 +21,10 @@
           <h5 matLine class="multiline centered">PATH {{database.path}}</h5>
         </mat-card-subtitle>
         <mat-card-actions>
-          <button mat-icon-button aria-label="Remove" (click)="showDeleteSheet($event, database)">
+          <button mat-icon-button aria-label="Remove" (click)="confirmDelete($event, database)">
             <mat-icon>delete_outline</mat-icon>
           </button>
-          <button mat-icon-button aria-label="Edit" (click)="showEditSheet($event, database)">
+          <button mat-icon-button aria-label="Edit" (click)="confirmEdit($event, database)">
             <mat-icon>edit</mat-icon>
           </button>
           <button mat-icon-button aria-label="Copy" (click)="duplicateDatabase($event, database)">
