--- a/dbinspector-client/src/app/rename-database/rename-database.component.html
+++ b/dbinspector-client/src/app/rename-database/rename-database.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Edit</h1>
 <div mat-dialog-content>
-  <p>Rename database <b>{{databaseName}}?</b></p>
+  <p>Rename database <b>{{data.name}}?</b></p>
   <mat-form-field appearance="fill">
     <mat-label>New name</mat-label>
     <input matInput [(ngModel)]="newName">
