Implement search and search filter pipe on databases.

--- a/dbinspector-client/src/app/databases/databases.component.html
+++ b/dbinspector-client/src/app/databases/databases.component.html
@@ -14,7 +14,7 @@
     <input
       class="search-bar-input"
       type="text"
-      placeholder="Search by name..."
+      placeholder="Enter name..."
       [(ngModel)]="searchTerm"/>
     <button mat-icon-button aria-label="Close" (click)="endSearch()">
       <mat-icon class="black-icon">close</mat-icon>
