--- a/dbinspector-client/src/app/schema/schema.component.css
+++ b/dbinspector-client/src/app/schema/schema.component.css
@@ -13,3 +13,31 @@
 .toolbar-menu-spacer {
   flex: 1 1 auto;
 }
+
+.search-bar{
+  background-color: #ffffff;
+  height: 40px;
+  border-radius: 40px;
+  display: flex;
+  min-width: 200px;
+  width: max-content;
+}
+
+.search-bar-icon {
+  width: 40px;
+  height: 40px;
+  min-width: 40px;
+  min-height: 40px;
+  padding: 8px;
+}
+
+.search-bar-input {
+  width: 100%;
+  outline: none;
+  border:none;
+  font-size: 16px;
+}
+
+.black-icon {
+  color: black;
+}
