--- a/dbinspector/src/main/res/layout/dbinspector_activity_settings.xml
+++ b/dbinspector/src/main/res/layout/dbinspector_activity_settings.xml
@@ -104,28 +104,13 @@
 
                         </com.google.android.material.textfield.TextInputLayout>
 
-                        <LinearLayout
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/serverButton"
+                            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:weightSum="1">
-
-                            <com.google.android.material.textview.MaterialTextView
-                                android:id="@+id/serverStateView"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:layout_marginEnd="16dp"
-                                android:text="@string/dbinspector_webserver_disabled"
-                                android:layout_weight="1" />
-
-                            <com.google.android.material.materialswitch.MaterialSwitch
-                                android:id="@+id/serverSwitch"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical" />
-
-                        </LinearLayout>
+                            android:layout_gravity="center_vertical"
+                            android:text="@string/dbinspector_webserver_disabled" />
 
                     </LinearLayout>
 
